Fix resize width causing middle content layout issue

--- a/style.css
+++ b/style.css
@@ -65,17 +65,24 @@ a{
 
 img{
     max-height: 100%;
-    max-width: 100%;
+    
+}
+
+.mid-img{
+    height: auto;
+    width: 100%;
 }
 
 
 .cards {
     display: flex;
     gap: 28px  ;
+    justify-content: center;
 }
 
 .card {
-    height: 300px;
+    width: 150px;
+    flex: 0 1 auto;
 }
 
 .bot-content{
@@ -123,4 +130,5 @@ button{
     justify-content: center;
 }
 
-/* {border: 2px solid red;}
+
+* {border: 2px solid red;}
